# rgpuOOP

./: .gitignore  main.py  pyproject.toml
laba_2/: laba_2_main.py  num_translater_interface.py  set_up.py  translaters.py  word_translater_interface.py
laba_2/tkinter_extended/: basic_interface.py  labeled_entry.py  placeholdered_entry.py
laba_3/: ball.py  bank.py  bus.py  laba_3_main.py  live_button.py  models.py  power_of.py
laba_4/: balls.py  exam.py  numbers.py  questions.json  set_up.py  students.json  students.py
laba_4/database/: __init__.py  base.py  exam.py  models.py
laba_4/models/: models.py
tests/: test_point.py
tkinter_extended/: ImageOnCanvas.py  canvas.py  focus_sensitive_elems.py  labeled_entry.py  set_up_util.py  utils.py
