[tool.black]
line-length = 79

# target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

experimental-string-processing = true

[tool.isort]
line_length = 79

multi_line_output = 3

force_single_line = true

known_standard_library = [
 "tkinter",
 "json",
 "typing",
 "collections",
]

known_third_party = [
    "pydantic",
]

known_local_folder = [
    "laba_4",
]

sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

profile = "black"

[tool.pylint]
disable = [
    "too-few-public-methods",
    "missing-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "attribute-defined-outside-init",
    "too-many-instance-attributes",
    "global-statement",
    "global-variable-undefined",
    "redefined-outer-name",
    "import-error",
]

[tool.poetry]
name = "rgpuoop"
version = "0.1.0"
description = ""
authors = [ "Nick-voz <nik.vozisow@gmail.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.34"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
debugpy = "^1.8.7"
pydantic = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
